K8s-deployment/numrah-api-servers/api-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: numrah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: asia-south1-docker.pkg.dev/tmp-devops/numrah/api-server:1.0.0-c37d1fe
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: env-volume
              mountPath: /tmp/
      volumes:
        - name: env-volume
          secret:
            secretName: numrah-secret
