K8s-deployment/numrah-api-servers/api-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: numrah
spec:
  selector:
    app: api-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
